Minor change in text.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <img class="img-rounded img-responsive" alt="Photo" src="assets/mariefredstrand.jpg" />
                 </div>
                 <div class="col-xs-12">
-                   <p align="center">MARIEFRED STRAND, KOMMER SNART</p>
+                   <p align="center">KOMMER SNART</p>
                 </div>
         <footer class="footer">
             <small>
